# MindMateBot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
handlers/: __init__.py  admin_handler.py  base_handler.py  checkin.py  checkin_handler.py  custom_message_handler.py  help.py  help_handler.py  messages.py  start.py  start_handler.py  tip.py  tip_handler.py
mind-mate-bot/: bot.py
mindmate_bot/: bot.py
services/: admin_service.py  checkin_service.py
utils/: admin_session_store.py  constants.py  logger.py  tips.py  user_store.py
